<resources>
    <string name="app_name">sun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="degree">&#176;C</string>
    <string name="degree_logo">&#176;</string>
    <string name="test_degree">16&#176;</string>
    <!--错误信息-->
    <string name="error_location_code">位置获取错误，请重新选择地点</string>
    <string name="error_network_refresh">请重新连接网络，并下拉尝试刷新</string>
    <string name="error_max_page">最多可以设置8个地方，先已经达到最大</string>

    <string name="title_activity_setting">设置</string>
    <string name="setting_title_choose">人性化自由选择</string>
    <string name="setting_content_auto_update">自动更新天气</string>
    <string name="setting_title_help">帮助</string>
    <string name="setting_content_feedback">我的反馈</string>
    <string name="setting_content_share">分享sun</string>
    <string name="setting_content_about">关于我</string>
    <string name="setting_summary_blog">Trity的博客</string>
    <string name="setting_content_update_version">手动检查更新</string>

    <string name="pop_title">快速引导</string>
    <string name="pop_content">左移或者右移来改变城市\n双指缩小显示4座城市\n双指放大天气预报的详情信息</string>
    <string name="splash_power_by">power by trity</string>

    <string name="locating">正在定位…</string>
    <string name="locate_fail">自动定位失败，请稍后再试</string>
    <string name="locate_fail_select">自动定位失败，请手动选择城市</string>
    <!-- Strings related to guide -->
    <string name="guide_enter">立即体验</string>
</resources>
